# tree-sitter-perl

./: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  setup.py  tree-sitter.json
.github/workflows/: publish.yml
bindings/rust/: build.rs  lib.rs
examples/: array.pl  function.pl  hash.pl  interpolation.pl  misc.pl  perlref.pl
src/: grammar.json  node-types.json  scanner.c
test/corpus/: comments.txt  control.txt  experimental.txt  expression.txt  heredoc.txt  module.txt  package.txt  quote-like-operators.txt  statement.txt  subroutine.txt  variables.txt
