[package]
name = "tree-sitter-perl"
description = "Perl grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "perl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ganezdragon/tree-sitter-perl"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
